@@ -1,3 +1,7 @@
+Mon May  5 09:36:34 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* record.c: fix illegal g_free in RecordRead
+
 Sun May  4 21:53:07 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gtkgame.c: cleanup use of the word 'session' 
